--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -1,28 +1,8 @@
 <app-topbar></app-topbar>
-<section class="hero">
-  <div class="hero-side left">
-    <div class="tile"></div>
-    <div class="tile"></div>
-    <div class="tile"></div>
-    <div class="tile"></div>
-    <div class="tile"></div>
-    <div class="tile"></div>
-  </div>
-  <div class="hero-center">
-    <h1 class="hero-title">The Ultimate Tello Drone Experience!<p-button (click)="onInstall()">Install</p-button></h1>
-    <div class="hero-actions">
-      <a href="#features" pButton class="p-button-outlined" label="Explore Features"></a>
-    </div>
-  </div>
-  <div class="hero-side right">
-    <div class="tile"></div>
-    <div class="tile"></div>
-    <div class="tile"></div>
-    <div class="tile"></div>
-    <div class="tile"></div>
-    <div class="tile"></div>
-  </div>
-  
+
+<section class="landing">
+  <h1>Welcome to Tello App, install</h1>
+  <img src="/download.jpeg" alt="Tello App" class="hero-image" loading="lazy">
 </section>
 
 <section class="about-teaser">
@@ -73,3 +53,5 @@
     <p>See what the drone sees in real time.</p>
   </section>
 </section>
+
+
