--- a/src/app/install/install.html
+++ b/src/app/install/install.html
@@ -12,7 +12,7 @@
       <p-accordion-header>Linux</p-accordion-header>
       <p-accordion-content>
         <p>
-          Download the latest Linux build from the releases page.
+            Downlaod ZIP file from the releases page.
         </p>
         <a href="https://github.com/dixonSolutions/TelloDroneFrontEnd/releases/tag/Linux" target="_blank" rel="noopener" pButton class="p-button-raised" label="Open Linux Release"></a>
       </p-accordion-content>
@@ -22,18 +22,19 @@
       <p-accordion-header>Windows</p-accordion-header>
       <p-accordion-content>
         <p>
-          Windows builds are provided as a single executable. If not available yet,
-          you can build locally using PyInstaller on Windows.
+          Downlaod EXE file from the releases page.
         </p>
+        <a href="https://github.com/dixonSolutions/TelloDroneFrontEnd/releases/tag/Windows" target="_blank" rel="noopener" pButton class="p-button-raised" label="Open Linux Release"></a>
       </p-accordion-content>
     </p-accordion-panel>
 
     <p-accordion-panel value="2">
-      <p-accordion-header>AppImage</p-accordion-header>
+      <p-accordion-header>Android</p-accordion-header>
       <p-accordion-content>
         <p>
-          Portable AppImage packages may be provided. Alternatively, you can create one using your Linux environment.
+         Downlaod APK file from the releases page.
         </p>
+        <a href="https://github.com/dixonSolutions/TelloDroneFrontEnd/releases/tag/Android" target="_blank" rel="noopener" pButton class="p-button-raised" label="Open Android Release"></a>
       </p-accordion-content>
     </p-accordion-panel>
   </p-accordion>
